--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     />
   </head>
   <body>
-   <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search movies..." />
       <button type="submit">Search</button>
     </form>
     <div class="gallery"></div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more visually-hidden">Load more</button>
     <script src="./index.js"></script>
   </body>
 </html>
